Update index.html title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>
         Hey there! Have you ever played rock, paper, scissors? It's a classic
         game that's easy to learn but fun to play, and now you can play it
-        against the computer in this HTML, CSS, and JS game.
+        against the computer in this game.
       </p>
 
       <ol>
